--- a/assetsOLAS/css/custom.css
+++ b/assetsOLAS/css/custom.css
@@ -4,20 +4,34 @@ a {
     color: #48b0f7;
     transition: .2s linear;
 }
+.site-footer:hover {
+    color: #48b0f7 !important;
+    transition: .2s linear !important;
+}
 /* FORMS*/
 .form-type-line .form-control {
     background-image:
     linear-gradient(#48b0f7, #48b0f7),linear-gradient(#ebebeb, #ebebeb);
 }
+.form-type-line .bootstrap-select.btn-group .dropdown-toggle{
+    border: none;
+    background-color: transparent;
+    padding-left: 0;
+    background-repeat: no-repeat;
+    background-position: center bottom,center calc(100%);
+    background-image: linear-gradient(#48b0f7, #48b0f7),linear-gradient(#ebebeb, #ebebeb);
+    transition: background 0.3s;
+}
 /* TABLES */
-table.table-bordered.dataTable td{
+table.table-responsive td{
 	border: none;
 	text-align: center;
 }
-thead {
+table.table-responsive thead tr th{
 	text-align: center;
 	background-color: #48b0f7;
 	color: white;
+    /*for th of datatables. (datepicker also has a table.)*/
 }
 .center{
 	text-align: center;
@@ -36,6 +50,12 @@ thead {
 }
 .table-action{
 	text-align: justify;
+}
+/*DATE PICKER*/
+.datepicker table tr td span.active.active, .datepicker table tr td span.active.disabled.active, .datepicker table tr td span.active.disabled:active, .datepicker table tr td span.active.disabled:hover.active, .datepicker table tr td span.active.disabled:hover:active, .datepicker table tr td span.active:active, .datepicker table tr td span.active:hover.active, .datepicker table tr td span.active:hover:active, .datepicker table tr td.active.active {
+    color: #fff;
+    background-color: #48b0f7 !important;
+    border-color: #48b0f7 !important;
 }
 /*TOPBAR*/
 .topbar .dropdown.show .topbar-btn {
@@ -77,3 +97,9 @@ thead {
     background-color: #48b0f7;
     border-color: #33cabb;
 }
+
+/* BACKDROP*/
+
+.app-backdrop, .backdrop-topbar-menu{
+    background-color: rgba(0, 0, 0, 0.5);
+ }
