--- a/assetsOLAS/css/custom.css
+++ b/assetsOLAS/css/custom.css
@@ -63,7 +63,7 @@ table.table-responsive thead tr th{
 }
 .table-integer{
 	text-align: right;
-}
+}   
 .table-action{
 	text-align: justify;
 }
@@ -87,6 +87,10 @@ table.table-responsive thead tr th{
 	color: #4d5259;
     border-top-color: #48b0f7;
     border-bottom-color: #48b0f7;
+}
+.topbar-btn:hover {
+    /*color: #4d5259;*/
+    border-top-color: #48b0f7;
 }
 
 /*SIDEBAR*/
@@ -119,3 +123,44 @@ table.table-responsive thead tr th{
 .app-backdrop, .backdrop-topbar-menu{
     background-color: rgba(0, 0, 0, 0.5);
  }
+
+@media screen and (min-width: 1px) and (max-width: 320px){
+    .isactive{
+        margin-left: 74%;
+    }
+ }
+@media screen and (min-width: 321px) and (max-width: 375px){
+    .isactive{
+        margin-left: 78%;
+    }
+ }
+@media screen and (min-width: 376px) and (max-width: 425px){
+    .isactive{
+        margin-left: 81%;
+    }
+ }
+ /*@media screen and (max-width: 768px){
+    div.isactive{
+        margin-left: 84%;
+    }
+ }
+ @media screen and (max-width: 1024px){
+    div.isactive{
+        margin-left: 84%;
+    }
+ }*/
+@media screen and (min-width: 426px) and (max-width: 1024px){
+    div.isactive{
+        margin-left: 84%;
+    }
+} 
+@media screen and (min-width: 1025px) and (max-width: 1440px){
+    div.isactive{
+        margin-left: 83%;
+    }
+}
+@media screen and (min-width: 1440px){
+    div.isactive{
+        margin-left: 83%;
+    }
+}
