--- a/assetsOLAS/css/custom.css
+++ b/assetsOLAS/css/custom.css
@@ -96,7 +96,31 @@ table.table-responsive thead tr th{
     /*color: #4d5259;*/
     border-top-color: #48b0f7;
 }
+/*SELECT PICKER*/
+.bootstrap-select.btn-group .dropdown-item.selected {
+    color: #fff;
+    background-color: #48b0f7;
+    font-weight: bold !important;
+  /*background: #bc0000 !important;*/
+    text-transform: uppercase;
+}
 
+.bootstrap-select.btn-group .dropdown-menu.inner {
+    display: block;
+    position: static;
+    float: none;
+    /*border: 1px #48b0f7 solid;*/
+    /*border-top:0;*/
+    padding: 0;
+    margin: 0;
+    border-radius: 0;
+    box-shadow: none;
+}
+
+.form-type-line:active select.active { /*DI PA TO NAGANA*/
+border-color: #48b0f7; 
+background-image: linear-gradient(#48b0f7, #48b0f7),linear-gradient(#48b0f7, #48b0f7);
+}
 /*SIDEBAR*/
 .sidebar .menu:not(.menu-bordery)>.menu-item.active>.menu-link {
    background-color: #48b0f7;
