--- a/assetsOLAS/css/custom.css
+++ b/assetsOLAS/css/custom.css
@@ -4,6 +4,13 @@ a {
     color: #48b0f7;
     transition: .2s linear;
 }
+
+#search-container.main-content{
+    flex: 0;
+}
+div > a.book-title{
+    color: #333;   
+}
 .site-footer:hover {
     color: #48b0f7 !important;
     transition: .2s linear !important;
@@ -25,6 +32,36 @@ a {
     color: #fff;
 }
 /* FORMS*/
+.form-title{
+    font-family: Varela Round,Arial, Helvetica Neue, Helvetica, serif;
+        font-size: 1.3em;
+        font-weight: bold;
+        color: #333!important;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+}
+
+.form-title-message{
+    font-family: Varela Round,Arial, Helvetica Neue, Helvetica, serif;
+        font-size: 1.3em;
+        font-weight: bold;
+        color: #fff!important;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+}
+
+.form-input{
+        font-family: Arial, Helvetica Neue, Helvetica, serif;
+        font-size: .9em;
+        /*font-weight: bold;*/
+        color: #333!important;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+
 .form-type-line .form-control {
     background-image:
     linear-gradient(#48b0f7, #48b0f7),linear-gradient(#ebebeb, #ebebeb);
@@ -143,7 +180,7 @@ background-image: linear-gradient(#48b0f7, #48b0f7),linear-gradient(#48b0f7, #48
 }
 
 .sidebar-header {
-    background-color: #926dde;
+    background-color: #926dde; /*04e0be*/
     padding: 0 12px;
     display: -webkit-box;
     display: flex;
