--- a/assetsOLAS/css/style1.css
+++ b/assetsOLAS/css/style1.css
@@ -91,7 +91,9 @@
         top:0;
         left: 20px; 
         pointer-events: none;
-
+        font-size: 1em;
+        max-height: 40px;
+        max-width: 130px
     }
 
     .message-text{
@@ -154,7 +156,9 @@
         top:0;
         left: 20px; 
         pointer-events: none;
-        
+        font-size: .9em;
+        max-height: 35px;
+        max-width: 120px
     }
 
     .message-text{
@@ -210,6 +214,22 @@
     	font-weight : 500; 
 	}
 
+    .book-availability{
+        position: absolute;
+        top:0;
+        left: 20px; 
+        pointer-events: none;
+        font-size: .9em;
+        max-height: 35px;
+        max-width: 120px
+    }
+
+    .message-text{
+        /*max-height: 50px;*/
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
 }
 
 @media screen and (min-width: 425px) and (max-width: 767px) { /*1025px*/
@@ -258,6 +278,21 @@
     	font-weight : 500; 
 	}
 
+    .book-availability{
+        position: absolute;
+        top:0;
+        left: 20px; 
+        pointer-events: none;
+        font-size: .9em;
+        max-height: 35px;
+        max-width: 120px
+    }
+
+    .message-text{
+        /*max-height: 50px;*/
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
 }
 
 @media screen and (min-width: 375px) and (max-width: 424px) { /*1025px*/
@@ -306,6 +341,21 @@
     	font-weight : 500; 
 	}
 
+    .book-availability{
+        position: absolute;
+        top:0;
+        left: 20px; 
+        pointer-events: none;
+        font-size: .9em;
+        max-height: 35px;
+        max-width: 120px
+    }
+
+    .message-text{
+        /*max-height: 50px;*/
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
 }
 
 @media screen and (min-width: 10px) and (max-width: 374px) { /*preffered is 320 ---1025px*/
@@ -355,6 +405,21 @@
     	font-weight : 500; 
 	}
 
+    .book-availability{
+        position: absolute;
+        top:0;
+        left: 20px; 
+        pointer-events: none;
+        font-size: .9em;
+        max-height: 35px;
+        max-width: 120px
+    }
+
+    .message-text{
+        /*max-height: 50px;*/
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
 }
 
 @media (min-width: 768px) { /*991.98px*/
