--- a/assetsOLAS/css/custom.css
+++ b/assetsOLAS/css/custom.css
@@ -31,6 +31,13 @@ div > a.book-title{
     background: #48b0f7 !important;
     color: #fff;
 }
+/* FAB BUTTONS*/
+div[class*=fab] button{
+    /*background-color:#49c5b6;*/
+    background-color:#48b0f7;
+    border-color:#48b0f7;
+}
+
 /* FORMS*/
 .form-title{
     font-family: Varela Round,Arial, Helvetica Neue, Helvetica, serif;
@@ -86,12 +93,19 @@ div > a.book-title{
     box-shadow: none;
 }
 /* TABLES */
+table[data-provide*=datatables] thead>tr>th{
+    /*background-color:#49c5b6;*/
+    background-color:#48b0f7;
+}
+
 .table>tbody>tr:hover td:first-child{
     border:none;
-    border-left: 3px solid #49c5b6; /*babaguhin pa kulay nito*/
+    /*border-left: 3px solid #49c5b6; /*babaguhin pa kulay nito*/*/
+    border-left: 3px solid #48b0f7; /*babaguhin pa kulay nito*/
 }
 .table>tbody>tr:hover td:last-child{
-    border-right: 3px solid #49c5b6; /*babaguhin pa kulay nito*/
+    /*border-right: 3px solid #49c5b6; /*babaguhin pa kulay nito*/*/
+    border-right: 3px solid #48b0f7; /*babaguhin pa kulay nito*/
 }
 
 .table>thead>tr>td, .table>tbody>tr>td, .table>tfoot>tr>td {
@@ -186,7 +200,7 @@ background-image: linear-gradient(#48b0f7, #48b0f7),linear-gradient(#48b0f7, #48
 }
 /*SIDEBAR*/
 .sidebar .menu:not(.menu-bordery)>.menu-item.active>.menu-link {
-   background-color: #48b0f7;
+   background-color: rgba(255,255,255,0.2);
     color: #fff;
 }
 .page-item.active .page-link, .page-item.active .page-link:focus, .page-item.active .page-link:hover {
@@ -196,7 +210,8 @@ background-image: linear-gradient(#48b0f7, #48b0f7),linear-gradient(#48b0f7, #48
 }
 
 .sidebar-header {
-    background-color: #926dde; /*04e0be*/
+    /*background-color: #49c5b6; /*04e0be */
+    background-color: #48b0f7; /*04e0be*/
     padding: 0 12px;
     display: -webkit-box;
     display: flex;
@@ -205,10 +220,29 @@ background-image: linear-gradient(#48b0f7, #48b0f7),linear-gradient(#48b0f7, #48
     color: #fff;
 }
 .sidebar .menu-submenu .menu-item.active>.menu-link .dot::after, .sidebar .menu-submenu .menu-item:hover>.menu-link .dot::after {
-    background-color: #48b0f7;
-    border-color: #33cabb;
+    /*background-color: #49c5b6 ;
+    border-color: #49c5b6 ;*/
+    background-color: #48b0f7 ;
+    border-color: #48b0f7 ;
 }
+/*  MODAL   */
 
+.modal-title {
+    font-family: Roboto,sans-serif;
+    font-weight: 400;
+    letter-spacing: .5px;
+    width: 75%!important;
+    margin: 0 auto;
+    margin-left: 12%;
+    overflow: hidden;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 24px;
+    color: #14171a;
+    text-align: center!important;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
 /* BACKDROP*/
 
 .app-backdrop, .backdrop-topbar-menu{
