--- a/assetsOLAS/css/style.css
+++ b/assetsOLAS/css/style.css
@@ -17,9 +17,9 @@
 
 .book-cover img{
 	position:absolute;
-	max-width:110px;
-	height:150px;
-	width:90px;
+	max-width:100%;
+	height:80%;
+	/*width:90px;*/
 	border-radius:3px;
 		-webkit-box-shadow:0 10px 60px 0 rgba(29,29,31,.09);
 		-moz-box-shadow:0 10px 60px 0 rgba(29,29,31,.09);
@@ -38,17 +38,45 @@
     pointer-events: none;
 }
 
+/* ----------- Non-Retina Screens ----------- */
+@media screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 1) { 
+}
+
+/* ----------- Retina Screens ----------- */
+@media screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (min-resolution: 192dpi) { 
+}
+
 @media screen and (min-width: 1440px ) { /*1440px*/
 	.book-cover img{
 		position:absolute;
-		max-width:110px;
+		/*max-width:110px;
 		height:150px;
-		width:90px;
+		width:90px;*/
+        max-width:100%;
+        height:80%;
 		border-radius:3px;
 			-webkit-box-shadow:0 10px 60px 0 rgba(29,29,31,.09);
 			-moz-box-shadow:0 10px 60px 0 rgba(29,29,31,.09);
 			box-shadow:0 10px 60px 0 rgba(29,29,31,.09)
 	}
+        .book-cover-search img{
+            max-width:110%;
+            max-height:100%;
+        }
+    
+    .book-info{
+        left: 5%;
+    }
+        /*.book-info-search{
+            left: 3%;
+        }*/
 
 	.book-title{
         font-family: Varela Round, Arial, Helvetica Neue, Helvetica, serif;
@@ -107,14 +135,27 @@
 @media screen and (min-width: 1024px) and (max-width: 1439px) { /*1025px*/
 	.book-cover img{
 		position:absolute;
-		max-width:90px;
+		/*max-width:90px;
 		height:130px;
-		width:70px;
+		width:70px;*/
+        max-width:130%;
+        max-height:80%;
 		border-radius:3px;
 			-webkit-box-shadow:0 10px 60px 0 rgba(29,29,31,.09);
 			-moz-box-shadow:0 10px 60px 0 rgba(29,29,31,.09);
 			box-shadow:0 10px 60px 0 rgba(29,29,31,.09)
-	}
+	} 
+        .book-cover-search img{
+            max-width:190%;
+            height:100%;
+        }
+
+    .book-info{
+        left: 12%;
+    }
+        .book-info-search{
+            left: 11%;
+        }
 
 	.book-title{
         font-family: Varela Round, Arial, Helvetica Neue, Helvetica, serif;
@@ -168,18 +209,37 @@
     }
 }
 
+@media screen and (min-width: 1260px) and (max-width: 1439px) {
+    .book-info-search{
+            left: 0;
+        }
+}
+
 @media screen and (min-width: 768px) and (max-width: 1023px) { /*1025px*/
 	.book-cover img{
 		position:absolute;
-		max-width:90px;
+		/*max-width:90px;
 		height:130px;
-		width:70px;
+		width:70px;*/
+        max-width:100%;
+        max-height:80%;
 		border-radius:3px;
 			-webkit-box-shadow:0 10px 60px 0 rgba(29,29,31,.09);
 			-moz-box-shadow:0 10px 60px 0 rgba(29,29,31,.09);
 			box-shadow:0 10px 60px 0 rgba(29,29,31,.09)
 	}
+        .book-cover-search img{
+            max-width:110%;
+            min-width:90px;
+            height:100%;
+        }
 
+    .book-info{
+        left: 12%;
+    }
+        .book-info-search{
+            left: 9%;
+        }
 	.book-title{
         font-family: Varela Round, Arial, Helvetica Neue, Helvetica, serif;
         font-size: 1.2em;
@@ -230,19 +290,42 @@
         text-overflow: ellipsis;
     }
 
+}
+@media screen and (min-width: 800px) and (max-width: 1023px) { /*1025px*/
+    .book-info-search{
+        left:5%;
+    }
+    .book-cover-search img{
+        max-width:110%;
+        min-width:90px;
+        height:100%;
+    }
 }
 
 @media screen and (min-width: 425px) and (max-width: 767px) { /*1025px*/
 	.book-cover img{
 		position:absolute;
-		max-width:110px;
+		/*max-width:110px;
 		height:150px;
-		width:90px;
+		width:90px;*/
+        max-width:100%;
+        max-height:80%;
 		border-radius:3px;
 			-webkit-box-shadow:0 10px 60px 0 rgba(29,29,31,.09);
 			-moz-box-shadow:0 10px 60px 0 rgba(29,29,31,.09);
 			box-shadow:0 10px 60px 0 rgba(29,29,31,.09)
 	}
+        .book-cover-search img{
+            max-width:110%;
+            min-width: 120px;
+            height:100%;
+        }
+    .book-info{
+        left: 5%;
+    }
+        .book-info-search{
+           left: 20%;
+        }
 
 	.book-title{
         font-family: Varela Round, Arial, Helvetica Neue, Helvetica, serif;
@@ -294,18 +377,35 @@
         text-overflow: ellipsis;
     }
 }
-
+@media screen and (min-width: 660px) and (max-width: 767px) { /*1025px*/
+    .book-info-search{
+           left: 0;
+    }
+}
 @media screen and (min-width: 375px) and (max-width: 424px) { /*1025px*/
 	.book-cover img{
 		position:absolute;
-		max-width:100px;
+		/*max-width:100px;
 		height:140px;
-		width:80px;
+		width:80px;*/
+        max-width:100%;
+        max-height:80%;
 		border-radius:3px;
 			-webkit-box-shadow:0 10px 60px 0 rgba(29,29,31,.09);
 			-moz-box-shadow:0 10px 60px 0 rgba(29,29,31,.09);
 			box-shadow:0 10px 60px 0 rgba(29,29,31,.09)
 	}
+        .book-cover-search img{
+            max-width:70px;
+            height:70%;
+        }
+
+    .book-info{
+        left: 5%;
+    }
+        .book-info-search{
+           left: 10%;
+        }
 
 	.book-title{
         font-family: Varela Round, Arial, Helvetica Neue, Helvetica, serif;
@@ -361,14 +461,28 @@
 @media screen and (min-width: 10px) and (max-width: 374px) { /*preffered is 320 ---1025px*/
 	.book-cover img{
 		position:absolute;
-		max-width:80px;
+		/*max-width:80px;
 		height:120px;
-		width:60px;
+		width:60px;*/
+        max-width:100%;
+        max-height:100%;        
 		border-radius:3px;
 			-webkit-box-shadow:0 10px 60px 0 rgba(29,29,31,.09);
 			-moz-box-shadow:0 10px 60px 0 rgba(29,29,31,.09);
 			box-shadow:0 10px 60px 0 rgba(29,29,31,.09)
+        left:0;
 	}
+        .book-cover-search img{
+            max-width:70px;
+            height:70%;
+        }
+
+    .book-info{
+        left: 5%;
+    }
+        .book-info-search{
+           left: 14%;
+        }
 
 	.book-title{
         font-family: Varela Round, Arial, Helvetica Neue, Helvetica, serif;
