--- a/assetsOLAS/css/customnat.css
+++ b/assetsOLAS/css/customnat.css
@@ -4,7 +4,7 @@
 }
 body{
     font-family: Varela Round,Arial, Helvetica Neue, Helvetica, serif;
-    background-color: white;
+    /*background-color: white;*/
 }
 a {
     color: #48b0f7;
