--- a/assetsOLAS/css/customnat.css
+++ b/assetsOLAS/css/customnat.css
@@ -6,7 +6,7 @@ body{
     /*font-family: Segoe UI,Frutiger,Frutiger Linotype,Dejavu Sans,Helvetica Neue,Arial,sans-serif; */
     /*font-family: Avant Garde,Avantgarde,Century Gothic,CenturyGothic,AppleGothic,sans-serif; */
     /*font-family: Optima,Segoe,Segoe UI,Candara,Calibri,Arial,sans-serif; */
-    font-family: Lucida Grande,Lucida Sans Unicode,Lucida Sans,Geneva,Verdana,sans-serif; 
+    /*font-family: Lucida Grande,Lucida Sans Unicode,Lucida Sans,Geneva,Verdana,sans-serif; */
     /*font-family: Futura,Trebuchet MS,Arial,sans-serif;*/
     /*font-family: Geneva,Tahoma,Verdana,sans-serif;*/
     /*font-family: Varela Round,Arial, Helvetica Neue, Helvetica, serif;*/
