--- a/assetsOLAS/css/style.css
+++ b/assetsOLAS/css/style.css
@@ -58,10 +58,10 @@
   and (max-device-width: 1600px) 
   and (-webkit-min-device-pixel-ratio: 1) { 
     body{
-        font-size: 
+        /*font-size: */
     }
     .menu-item>.menu-link span.title{
-        font-size: 20px;
+        /*font-size: 20px;*/
     }
 }
 
@@ -72,14 +72,14 @@
   and (-webkit-min-device-pixel-ratio: 2)
   and (min-resolution: 192dpi) { 
     .menu-item>.menu-link span.title{
-        font-size: 20px;
+        /*font-size: 20px;*/
     }
     form label{
-        font-size: 2vw;
+        /*font-size: 2vw;*/
     }
 
     div.bootstrap-selectbutton> button.dropdown-toggle, form input.form-control, form input[type*=checkbox], form span.switch-indicator{
-        font-size: 1.5vw;
+        /*font-size: 1.5vw;*/
     }
 }
 
