--- a/assetsOLAS/css/customnat.css
+++ b/assetsOLAS/css/customnat.css
@@ -53,8 +53,56 @@ div > a.book-title{
     color: #48b0f7 !important;
     transition: .2s linear !important;
 }
+/*Forms*/
+.form-control, .form-control:focus{
+    background-color: #f7f9fa;
+}
+
+input,.bootstrap-select, textarea{
+    /*padding-right : 8px!important;*/
+    padding-left: 8px!important;
+}
+/*clear ko lang to nasa itaas*/
+.bootstrap-select:not(.input-group-btn).search {
+    padding: 0!important;
+}
+
+
+div.dropdown-menu.open.show{
+    left:7%!important;
+}
+.bootstrap-select.btn-group .dropdown-menu {
+    min-width: 90%!important;
+}
+div[class*=form-group]:hover{
+    /*border: solid 1px #48b0f7;*/
+}
+
+html{
+  @include responsive("font-size", 11px,
+    (
+       600px: 12px,
+       800px: 13px,
+      1180px: 14px,
+      1300px: 15px,
+      1750px: 16px,
+      1900px: 17px,
+      2100px: 18px,
+      2400px: 19px
+    )
+  );
+} 
+/*di gamit*/
+.selected-input { border: #f00 1px solid; padding: 10px; }
+
+.form-row h6{
+    font-weight: bold;
+}
 .form-group>label{
-    font-weight:500;
+    font-weight: 600;
+}
+.form-group>input,.form-group>select, textarea{
+    font-weight: 500;
 }
 
 /*Mouse Cursor*/
