--- a/assetsOLAS/css/style.css
+++ b/assetsOLAS/css/style.css
@@ -41,7 +41,9 @@
 @media 
   (min-device-width: 800px) 
   and (max-device-width: 1200px) {
-
+    body {
+        font-size:large;
+    }
 }
 
 /* Portrait and Landscape */
@@ -88,6 +90,11 @@
   and (max-device-width: 2000px) 
   and (-webkit-min-device-pixel-ratio: 2)
   and (min-resolution: 192dpi) { 
+
+    body *{
+        font-size:large!important;
+    }
+
     .menu-item>.menu-link span.title{
         font-size: 20px;
     }
